--- a/package.json
+++ b/package.json
@@ -1,11 +1,31 @@
 {
-  "name": "react-redux-boilerplate",
+  "name": "@fiveem/react-redux-boilerplate",
   "version": "0.1.0",
-  "private": true,
+  "description": "React Redux Boilerplate",
+  "keywords": [
+    "react",
+    "redux",
+    "boilerplate"
+  ],
+  "author": "Razvan Muntian <muntianrazvan@gmail.com> (https://razvan.muntian.ro)",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/fiveem/react-redux-boilerplate.git"
+  },
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/fiveem/react-redux-boilerplate/issues"
+  },
+  "homepage": "https://github.com/fiveem/react-redux-boilerplate#readme",
   "dependencies": {
+    "node-sass": "^4.12.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-scripts": "3.0.1"
+    "react-redux": "^7.0.3",
+    "react-router-dom": "^5.0.1",
+    "react-scripts": "3.0.1",
+    "redux": "^4.0.1",
+    "redux-thunk": "^2.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
